db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
